--- a/JewlryShop2/Pages/Shared/_Layout.cshtml
+++ b/JewlryShop2/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">JewlryShop2</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">JewelryShop</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Customers/Index">Customers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Purchase/Index">Basket</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Purchases/Index">Basket</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Reviews/Index">Reviews</a>
